backend/django_Admin3/migrate_result.txt
DJANGO_ENV None
DJANGO_ENV development
DJANGO_SETTINGS_MODULE django_Admin3.settings.development
DJANGO_ENV FILE /Users/work/Documents/Code/Admin3/backend/django_Admin3/.env.development
Loading environment from: /Users/work/Documents/Code/Admin3/backend/django_Admin3/.env.development
Operations to perform:
  Apply all migrations: address_analytics, address_cache, admin, administrate, auth, cart, catalog, catalog_exam_sessions, catalog_products, catalog_products_bundles, catalog_products_recommendations, catalog_subjects, contenttypes, email_system, filtering, marking, marking_vouchers, orders, rules_engine, sessions, store, students, tutorials, userprofile, utils
Running migrations:
  Applying administrate.0005_alter_coursetemplate_table_and_more...Traceback (most recent call last):
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/db/backends/utils.py", line 103, in _execute
    return self.cursor.execute(sql)
           ~~~~~~~~~~~~~~~~~~~^^^^^
psycopg2.errors.SyntaxError: syntax error at or near "."
LINE 1: ALTER TABLE "adm.course_templates" RENAME TO "adm"."course_t...
                                                          ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/Users/work/Documents/Code/Admin3/backend/django_Admin3/./manage.py", line 24, in <module>
    main()
    ~~~~^^
  File "/Users/work/Documents/Code/Admin3/backend/django_Admin3/./manage.py", line 20, in main
    execute_from_command_line(sys.argv)
    ~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/core/management/__init__.py", line 443, in execute_from_command_line
    utility.execute()
    ~~~~~~~~~~~~~~~^^
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/core/management/__init__.py", line 437, in execute
    self.fetch_command(subcommand).run_from_argv(self.argv)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/core/management/base.py", line 420, in run_from_argv
    self.execute(*args, **cmd_options)
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/core/management/base.py", line 464, in execute
    output = self.handle(*args, **options)
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/core/management/base.py", line 111, in wrapper
    res = handle_func(*args, **kwargs)
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/core/management/commands/migrate.py", line 354, in handle
    post_migrate_state = executor.migrate(
        targets,
    ...<3 lines>...
        fake_initial=fake_initial,
    )
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/db/migrations/executor.py", line 137, in migrate
    state = self._migrate_all_forwards(
        state, plan, full_plan, fake=fake, fake_initial=fake_initial
    )
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/db/migrations/executor.py", line 169, in _migrate_all_forwards
    state = self.apply_migration(
        state, migration, fake=fake, fake_initial=fake_initial
    )
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/db/migrations/executor.py", line 257, in apply_migration
    state = migration.apply(state, schema_editor)
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/db/migrations/migration.py", line 132, in apply
    operation.database_forwards(
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        self.app_label, schema_editor, old_state, project_state
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/db/migrations/operations/models.py", line 568, in database_forwards
    schema_editor.alter_db_table(
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        new_model,
        ^^^^^^^^^^
        old_model._meta.db_table,
        ^^^^^^^^^^^^^^^^^^^^^^^^^
        new_model._meta.db_table,
        ^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/db/backends/base/schema.py", line 688, in alter_db_table
    self.execute(
    ~~~~~~~~~~~~^
        self.sql_rename_table
        ^^^^^^^^^^^^^^^^^^^^^
    ...<3 lines>...
        }
        ^
    )
    ^
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/db/backends/postgresql/schema.py", line 48, in execute
    return super().execute(sql, None)
           ~~~~~~~~~~~~~~~^^^^^^^^^^^
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/db/backends/base/schema.py", line 205, in execute
    cursor.execute(sql, params)
    ~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/db/backends/utils.py", line 122, in execute
    return super().execute(sql, params)
           ~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/db/backends/utils.py", line 79, in execute
    return self._execute_with_wrappers(
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        sql, params, many=False, executor=self._execute
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/db/backends/utils.py", line 92, in _execute_with_wrappers
    return executor(sql, params, many, context)
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/db/backends/utils.py", line 100, in _execute
    with self.db.wrap_database_errors:
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/db/utils.py", line 94, in __exit__
    raise dj_exc_value.with_traceback(traceback) from exc_value
  File "/Users/work/Documents/Code/Admin3/.venv/lib/python3.14/site-packages/django/db/backends/utils.py", line 103, in _execute
    return self.cursor.execute(sql)
           ~~~~~~~~~~~~~~~~~~~^^^^^
django.db.utils.ProgrammingError: syntax error at or near "."
LINE 1: ALTER TABLE "adm.course_templates" RENAME TO "adm"."course_t...
                                                          ^

